@@ -41,7 +41,9 @@ public class BankAccountServiceImpl implements BankAccountService {
     private final BankAccountRepository bankAccountRepository;
     private final AccountOperationRepository accountOperationRepository;
     private final BankAccountMapperImpl dtoMapper;
-
+    private static final String Customer_Not_Found = "Customer not found";
+    private static final String Bank_Account_Not_Found = "BankAccount not found";
+    private static final String Balance_Not_Found = "Balance not found";
     @Override
     public CustomerDTO saveCustomer(CustomerDTO customerDTO) {
         log.info("Saving new Customer");
@@ -51,7 +53,7 @@ public class BankAccountServiceImpl implements BankAccountService {
 
     @Override
     public CurrentBankAccountDTO saveCurrentBankAccount(double initialBalance, double overDraft, Long customerId) throws CustomerNotFoundException {
-        Customer customer = customerRepository.findById(customerId).orElseThrow(() -> new CustomerNotFoundException("Customer not found"));
+        Customer customer = customerRepository.findById(customerId).orElseThrow(() -> new CustomerNotFoundException(Customer_Not_Found));
         CurrentAccount currentAccount = new CurrentAccount();
         currentAccount.setId(UUID.randomUUID().toString());
         currentAccount.setCreatedAt(new Date());
@@ -62,7 +64,7 @@ public class BankAccountServiceImpl implements BankAccountService {
 
     @Override
     public SavingBankAccountDTO saveSavingBankAccount(double initialBalance, double interestRate, Long customerId) throws CustomerNotFoundException {
-        Customer customer = customerRepository.findById(customerId).orElseThrow(()->new CustomerNotFoundException("Customer not found"));
+        Customer customer = customerRepository.findById(customerId).orElseThrow(()->new CustomerNotFoundException(Customer_Not_Found));
         SavingAccount savingAccount = new SavingAccount();
         savingAccount.setId(UUID.randomUUID().toString());
         savingAccount.setCreatedAt(new Date());
@@ -77,14 +79,14 @@ public class BankAccountServiceImpl implements BankAccountService {
         List<Customer> customers= customerRepository.findAll();
         List<CustomerDTO> customerDTOS = customers.stream()
                 .map(customer -> dtoMapper.fromCustomer(customer))
-                .collect(Collectors.toList());
+                .toList();
         return customerDTOS;
     }
 
     @Override
     public BankAccountDTO getBankAccount(String accountId) throws BankAccountNotFoundException {
         BankAccount bankAccount = bankAccountRepository.findById(accountId)
-                .orElseThrow(()-> new BankAccountNotFoundException("BankAccount not found"));
+                .orElseThrow(()-> new BankAccountNotFoundException(Bank_Account_Not_Found));
         if (bankAccount instanceof SavingAccount){
             SavingAccount savingAccount = (SavingAccount) bankAccount;
             return dtoMapper.fromSavingBankAccount(savingAccount);
@@ -97,8 +99,8 @@ public class BankAccountServiceImpl implements BankAccountService {
     @Override
     public void debit(String accountId, double amount, String description) throws BankAccountNotFoundException, BalanceNotSufficientException {
         BankAccount bankAccount = bankAccountRepository.findById(accountId)
-                .orElseThrow(() -> new BankAccountNotFoundException("BankAccount not found"));
-        if (bankAccount.getBalance() < amount) throw new BalanceNotSufficientException("Balance not found");
+                .orElseThrow(() -> new BankAccountNotFoundException(Bank_Account_Not_Found));
+        if (bankAccount.getBalance() < amount) throw new BalanceNotSufficientException(Balance_Not_Found);
         AccountOperation accountOperation = new AccountOperation();
         accountOperation.setType(OperationType.DEBIT);
         accountOperation.setAmount(amount);
@@ -113,7 +115,7 @@ public class BankAccountServiceImpl implements BankAccountService {
     @Override
     public void credit(String accountId, double amount, String description) throws BankAccountNotFoundException {
         BankAccount bankAccount = bankAccountRepository.findById(accountId)
-                .orElseThrow(()->new BankAccountNotFoundException("bankAccount not found"));
+                .orElseThrow(()->new BankAccountNotFoundException(Bank_Account_Not_Found));
         AccountOperation accountOperation = new AccountOperation();
         accountOperation.setType(OperationType.CREDIT);
         accountOperation.setAmount(amount);
@@ -134,22 +136,21 @@ public class BankAccountServiceImpl implements BankAccountService {
     @Override
     public List<BankAccountDTO> bankAccountList() {
         List<BankAccount> bankAccounts = bankAccountRepository.findAll();
-        List<BankAccountDTO> bankAccountDTOS = bankAccounts.stream()
+        return bankAccounts.stream()
                 .map(bankAccount -> {
                     if (bankAccount instanceof SavingAccount){
-                        SavingAccount savingAccount = (SavingAccount) bankAccounts;
+                        SavingAccount savingAccount = (SavingAccount) bankAccount;
                         return dtoMapper.fromSavingBankAccount(savingAccount);
                     }else {
                         CurrentAccount currentAccount = (CurrentAccount) bankAccount;
                         return dtoMapper.fromCurrentBankAccount(currentAccount);
                     }
-                }).collect(Collectors.toList());
-        return bankAccountDTOS;
+                }).toList();
     }
 
     @Override
     public CustomerDTO getCustomer(Long customerId) throws CustomerNotFoundException {
-        Customer customer = customerRepository.findById(customerId).orElseThrow(()->new CustomerNotFoundException("Customer not found"));
+        Customer customer = customerRepository.findById(customerId).orElseThrow(()->new CustomerNotFoundException(Customer_Not_Found));
         return dtoMapper.fromCustomer(customer);
     }
 
@@ -172,17 +173,17 @@ public class BankAccountServiceImpl implements BankAccountService {
         List<AccountOperation> accountOperations = accountOperationRepository.findByBankAccountId(accountId);
         return accountOperations.stream()
                 .map(accountOperation -> dtoMapper.fromAccountOperation(accountOperation))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public AccountHistoryDTO getAccountHistory(String accountId, int page, int size) throws BankAccountNotFoundException {
-        BankAccount bankAccount = bankAccountRepository.findById(accountId).orElseThrow(()->new BankAccountNotFoundException("Account not found"));
+        BankAccount bankAccount = bankAccountRepository.findById(accountId).orElseThrow(()->new BankAccountNotFoundException(Bank_Account_Not_Found));
         Page<AccountOperation> accountOperations = accountOperationRepository.findByBankAccountId(accountId, PageRequest.of(page, size));
         AccountHistoryDTO accountHistoryDTO = new AccountHistoryDTO();
         List<AccountOperationDTO> accountOperationDTOS = accountOperations.getContent().stream()
                 .map(accountOperation -> dtoMapper.fromAccountOperation(accountOperation))
-                .collect(Collectors.toList());
+                .toList();
         accountHistoryDTO.setAccountOperationDTOS(accountOperationDTOS);
         accountHistoryDTO.setAccountId(bankAccount.getId());
         accountHistoryDTO.setBalance(bankAccount.getBalance());
